--- a/loja/loja-dev.yml
+++ b/loja/loja-dev.yml
@@ -2,10 +2,13 @@ server.port: 8090
 
 scopo.teste: ABCDE
 
-management.endpoint.shutdown.enabled: true
-management.endpoints.enabled-by-default: true
-management.endpoint.info.enabled: true
-management.endpoints.web.exposure.include: '*'
+management: 
+    endpoint: 
+        shutdown.enabled: true
+        info.enabled: true
+    endpoints:
+        enabled-by-default: true
+        web.exposure.include: '*'
 
 eureka:
     client:
